Add Kafka consumer to persist transaction history asynchronously

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Kafka
+	implementation 'org.springframework.kafka:spring-kafka'
 }
 
 
