--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -60,7 +60,9 @@ dependencies {
 
 	// R2DBC(Reactive MySQL)
 	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-	runtimeOnly 'dev.miku:r2dbc-mysql' //MySQL R2DBC 드라이버
+
+	//MySQL R2DBC 드라이버
+	runtimeOnly 'dev.miku:r2dbc-mysql'
 }
 
 
